--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "framer-motion": "^12.23.22",
     "next": "15.5.3",
+    "pluralize": "^8.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
